--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Web Development Blog">
-  <meta name="author" content="Josh Levy">
-  <title>Coding Roadmap | Web Development Blog</title>
-  <link href="./assets/img/brand/Coding-Roadmap-Logo.png" rel="icon" type="image/png">
+  <meta name="description" content="It Might Be Interesting">
+  <meta name="author" content="Josh Levy and Jon Walsh">
+  <title>It Might Be Interesting</title>
+  <link href="./assets/img/It_Might_Be_Interesting_Black.jpg" rel="icon" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
   <link href="./assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
