--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="It Might Be Interesting">
+  <meta name="description" content="It Might Be Interesting Podcast">
   <meta name="author" content="Josh Levy and Jon Walsh">
   <title>It Might Be Interesting</title>
   <link href="./assets/img/It_Might_Be_Interesting_Black.jpg" rel="icon" type="image/png">
@@ -14,5 +14,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/6.2.4/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
 </body>
 </html>
