--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,15 @@
   <title>It Might Be Interesting</title>
   <link href="./assets/img/It_Might_Be_Interesting_Black.jpg" rel="icon" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/748328d6ef.js"></script>
   <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="./assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="/__/firebase/6.2.4/firebase-app.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#reserved-urls -->
+  <!-- TODO: Add SDKs for Firebase products that you want to use here -->
 
-  <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
 </body>
 </html>
