--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="/__/firebase/6.2.4/firebase-app.js"></script>
+  <!-- <script src="/__/firebase/6.2.4/firebase-app.js"></script> -->
 
   <!-- TODO: Add SDKs for Firebase products that you want to use here -->
 
-  <script src="/__/firebase/init.js"></script>
+  <!-- <script src="/__/firebase/init.js"></script> -->
 </body>
 </html>
