--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <script src="https://kit.fontawesome.com/748328d6ef.js"></script>
   <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
