Updated core logos. Need to implement additional custom meta data

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="description" content="It Might Be Interesting Podcast">
   <meta name="author" content="Josh Levy and Jon Walsh">
   <title>It Might Be Interesting</title>
-  <link href="./assets/img/It_Might_Be_Interesting_Black.jpg" rel="icon" type="image/png">
+  <link href="./assets/img/It_Might_Be_Interesting_Black.jpeg" rel="icon" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <script src="https://kit.fontawesome.com/748328d6ef.js"></script>
   <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
